--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,62 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+<div class="middle">
+  <div class="middle_text">
+    <p class="middle_text1">侯斯特，一站式微信营销及粉丝管理平台</p>
+    <p class="middle_text2">基于公众号管理粉丝关系和挖掘潜在销售机会，实现真正的Social CRM</p>
+
+    <div class="middle_button">
+      <button>产品体验</button>
+      <button>现在注册</button>
+    </div>
+  </div>
+  <div class="middle_bottom">
+    <div class="middle_shuzi">
+      <span>粉丝增长速度平均提升<span class="shuzi">43%</span></span>|
+      <span>图文阅读率平均提升<span class="shuzi">36%</span></span>|
+      <span>粉丝活跃度平均提升<span class="shuzi">78%</span></span>
+    </div>
+  </div>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+<div class="updown">
+  <a>
+    <div class="updown_div">        
+        <img src="images/1.png" class="updown_img">
+        <p class="updown_title">数据管理</p>
+        <p class="updown_txt">消息及数据自动转换为有价值的标签</p>
+        <p class="updown_txt">形成清晰的粉丝画像</p>
+        <p class="updown_down">进入CRM ></p>
+      
+    </div>
+  </a>
+  <a>
+    <div class="updown_div">
+      
+        <img src="images/2.png" class="updown_img">
+        <p class="updown_title">营销推送</p>
+        <p class="updown_txt">帮助品牌建立起多种类</p>
+        <p class="updown_txt">个性化的粉丝沟通能力</p>
+        <p class="updown_down">开始使用 ></p>
+      
+    </div>
+  </a>
+  <a>
+    <div class="updown_div">
+      
+        <img src="images/3.png" class="updown_img">
+        <p class="updown_title">红人平台</p>
+        <p class="updown_txt">KOL数据分析，选择性价比</p>
+        <p class="updown_txt">量高的推广资源</p>
+        <p class="updown_down">立即使用 ></p>
+      
+    </div>
+  </a>
+  <a>
+    <div class="updown_div">      
+      <img src="images/4.png" class="updown_img">
+      <p class="updown_title">轻应用</p>
+      <p class="updown_txt">提供不用技术开发的轻应用模板</p>
+      <p class="updown_txt">点点鼠标就生成互动</p>
+      <p class="updown_down">查看应用 ></p>      
+    </div>
+  </a>
+</div>  
