添加合作伙伴界面

--- a/app/views/partners.html
+++ b/app/views/partners.html
@@ -1,1 +1,182 @@
-<p>This is the partners view.</p>
+<div class="app app-header-fixed" id="app">
+
+<div class="partners">
+    <p>合作伙伴</p>
+    <a href="http://maka.im/" target="_blank">
+        <div>
+            <img src="images/huoban_03.png" alt=".">
+        </div>
+    </a>
+
+    <a href="https://www.pingxx.com/" target="_blank">
+        <div>
+            <img src="images/huoban_05.png" alt=".">
+        </div>
+    </a>
+
+    <a href="https://yiqixie.com/" target="_blank">
+        <div>
+            <img src="images/huoban_07.png" alt=".">
+        </div>
+    </a>
+
+    <a href="https://jinshuju.net/" target="_blank">
+        <div>
+            <img src="images/huoban_09.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.bangtuike.com.cn/" target="_blank">
+        <div>
+            <img src="images/huoban_11.png" alt=".">
+        </div>
+    </a>
+
+    <a href="https://www.h6app.com/index.html" target="_blank">
+        <div>
+            <img src="images/huoban_18.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.wemart.cn/" target="_blank">
+        <div>
+            <img src="images/huoban_19.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.geetest.com/" target="_blank">
+        <div>
+            <img src="images/huoban_20.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.chuangkit.com/" target="_blank">
+        <div>
+            <img src="images/huoban_21.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.grouplus.com/" target="_blank">
+        <div>
+            <img src="images/huoban_22.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://xmt.cn/" target="_blank">
+        <div>
+            <img src="images/huoban_28.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.e7wei.com/" target="_blank">
+        <div>
+            <img src="images/huoban_29.png" alt=".">
+        </div>
+    </a>
+
+    <a href="https://pubu.im/" target="_blank">
+        <div>
+            <img src="images/huoban_30.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.yisutui.com/" target="_blank">
+        <div>
+            <img src="images/huoban_31.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://tool.96weixin.com/" target="_blank">
+        <div>
+            <img src="images/huoban_32.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.yuantuan.com/" target="_blank">
+        <div>
+            <img src="images/huoban_38.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.135editor.com/" target="_blank">
+        <div>
+            <img src="images/huoban_39.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://xiumi.us/#/" target="_blank">
+        <div>
+            <img src="images/huoban_40.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.wxb.com/" target="_blank">
+        <div>
+            <img src="images/huoban_41.png" alt=".">
+        </div>
+    </a>
+
+    <a href="https://zhugeio.com/" target="_blank">
+        <div>
+            <img src="images/huoban_42.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.xinmeii.com/" target="_blank">
+        <div>
+            <img src="images/huoban_48.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.beetobees.com/?acode=host" target="_blank">
+        <div>
+            <img src="images/huoban_49.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.rabbitpre.com/" target="_blank">
+        <div>
+            <img src="images/huoban_50.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.zhichiwangluo.com/" target="_blank">
+        <div>
+            <img src="images/youlian_03.png" alt=".">
+        </div>
+    </a>
+
+    <a href="http://www.wqdian.com/" target="_blank">
+        <div>
+            <img src="images/youlian_05.png" alt=".">
+        </div>
+    </a>
+
+    <a href="https://shimo.im/" target="_blank">
+        <div>
+            <img src="images/shimo.png" alt=".">
+        </div>
+    </a>
+
+    <a href="https://www.jianguoyun.com/" target="_blank">
+        <div>
+            <img src="images/jianguoyun.png" alt=".">
+        </div>
+    </a>
+
+    <a href="https://www.yangcong.com/" target="_blank">
+        <div>
+            <img src="images/webwxgetmsgimg.jpg" alt=".">
+        </div>
+    </a>
+
+    <a href="http://weikebang.com/" target="_blank">
+        <div>
+            <img src="images/viewfile.jpg" alt=".">
+        </div>
+    </a>
+
+</div>
+
+</div>
+
