--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,6 +7,42 @@
 
 body {
   padding: 0;
+  font-family: "Microsoft YaHei" ! important;
+}
+
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+    background-color: #3A87FD;
+}
+
+.navbar-default .navbar-toggle {
+    border:none;
+}
+
+.navbar-default .navbar-nav > li > a {
+    color: #ffffff;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+    color: #ffffff;
+    text-decoration: underline;
+
+}
+
+.navbar-default .navbar-nav > li > a:visited {
+    color: #ffffff;
+    text-decoration: underline;
+
+}
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+    color: #ffffff;
+    background-color: #3A87FD;
+}
+
+.a:hover{
+  text-decoration: none;
+  color: #B5B5B5;
+
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -29,7 +65,20 @@ body {
   line-height: 40px;
   padding-bottom: 19px;
 }
-
+.navbar-default{
+    background-color: #3A87FD;
+    border-color: #3A87FD;
+}
+.nav_logo{
+    width:13rem;
+    margin-left: 0.9rem;
+    float: left;    
+}
+.nav_logo img{
+    width:75%; 
+    margin-left:1.2rem; 
+    margin-top:-0.2rem;
+}
 /* Custom page footer */
 .footer {
   padding-top: 19px;
@@ -62,7 +111,7 @@ body {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 730px;
+    max-width: 100%;
   }
 
   /* Remove the padding we set earlier */
@@ -76,8 +125,1015 @@ body {
   .header {
     margin-bottom: 30px;
   }
+  .navbar{
+    border-radius: 0px;
+  }
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+/*全局*/
+.container{
+  width: 100%;
+}
+
+/*footer*/
+.footer{
+    width: 100%;
+    border: 1px solid #E8E8E8;
+    height:23rem;
+    float: left;
+    bottom:0px;
+    background-color: #FAFAFA;
+    color: #9C9C9C;
+
+}
+
+.footer a{
+    color: #9C9C9C;
+    text-decoration: none;
+    cursor: pointer;
+}
+.footer a:hover{
+    color: black;
+}
+
+.footer_left{
+    width: 14.5%;
+    float: left;
+    margin-left: 24%;
+    margin-top: 2.2%;
+    line-height: 2.5rem;
+
+}
+
+.footer_mid{
+    width: 14.5%;
+    float: left;
+    margin-top: 2.2%;
+    line-height: 2.5rem;
+}
+
+.footer_mid_img{
+    width: 14.5%;
+    float: left;
+    margin-top: 2.5%;
+    line-height: 2.5rem;
+
+}
+.footer_img{
+    margin-top:0.3rem;
+}
+.footer_img1{
+    width: 1.7rem;
+    height: 1.7rem;
+    background: url("../images/wechat.png");
+    margin-right: 1rem;
+    background-size: 100%;
+    display:block;
+    float: left;
+
+}
+
+.footer_img1:hover{
+    width: 1.7rem;
+    height: 1.7rem;
+    background: url("../images/wechat2.png");
+    margin-right: 1rem;
+    background-size: 100%;
+    display:block;
+    float: left;
+
+}
+
+.footer_img2{
+    width: 1.7rem;
+    height: 1.7rem;
+    background: url("../images/webo.png");
+    margin-right: 1rem;
+    background-size: 100%;
+    display:block;
+    float: left;
+
+}
+
+.footer_img2:hover{
+    width: 1.7rem;
+    height: 1.7rem;
+    background: url("../images/webo2.png");
+    margin-right: 1rem;
+    background-size: 100%;
+    display:block;
+    float: left;
+
+}
+.footer_img3{
+    width: 1.7rem;
+    height: 1.7rem;
+    background: url("../images/app.png");
+    margin-right: 1rem;
+    background-size: 100%;
+    display:block;
+    float: left;
+
+}
+
+.footer_img3:hover{
+    width: 1.7rem;
+    height: 1.7rem;
+    background: url("../images/app2.png");
+    margin-right: 1rem;
+    background-size: 100%;
+    display:block;
+    float: left;
+
+}
+
+.footer_right{
+    width: 14.5%;
+    float: left;
+    margin-top: 2.5%;
+    line-height: 2.5rem;
+}
+
+.footer_bottom{
+    width: 100%;
+    text-align: center;
+    clear:both;
+    font-size: 0.8rem;
+    margin-top: 19rem;
+}
+
+/*主页面*/
+.middle{
+    width: 100%;
+    height:70rem;
+    background:url(../images/index-bg.jpg) no-repeat -178px 0;
+    background-size: cover;
+    position:relative;
+    margin-top: 4rem;
+}
+
+.middle_text{    
+    margin-left: 36%;
+    padding-top:21.5rem;
+
+}
+
+.middle_text1{
+    font-size: 3rem;
+    color: white;
+}
+
+.middle_text2{
+    font-size: 1.5rem;
+    color: white;
+    margin-top: 2rem;
+    margin-left: 2rem;
+}
+.middle_button{
+    margin-top: 5rem;
+    margin-left: 15rem;
+}
+.middle_bottom{
+    width: 100%;
+    height: 7.2rem;
+    background-color: rgba(0, 0, 0, 0.3);
+    position:absolute;
+    bottom:0;
+    color: white;
+    font-size: 1.6rem;
+    
+}
+.middle_shuzi{
+    text-align: center;
+}
+.middle_shuzi span{
+    width: 20rem;
+}
+.shuzi{
+    font-size: 3rem;
+}
+
+/*updown*/
+.updown{
+    width: 100%;
+    height: 30rem;
+    background-color: #ffffff;
+    margin-left: 25%;
+    cursor: pointer;
+}
+.updown_div{    
+    width: 20rem;
+    height: 20rem;
+    float: left;
+    margin-top: 5rem;
+}
+
+.updown_img{
+    width: 7rem;
+    height: 7rem;
+    margin-left: 6rem;
+    margin-top: 2rem;
+}
+
+.updown_title{
+    color: black;
+    font-size: 1.8rem;
+    margin-left: 6.5rem;
+    margin-top: 1rem;
+
+}
+
+.updown_txt{
+    color: black;
+    text-align: center;
+}
+
+.updown_down{
+    color: #00B2EE;
+    margin-left: 6.3rem;
+
+}
+
+/*关于我们*/
+.about{
+    width: 58%;
+    height: 90%;
+    margin-left: 21%;
+    margin-top: 6rem;
+
+}
+#about_title{
+    text-align: center;
+    font-size: 2.2rem;
+    line-height: 10rem;
+    
+}
+
+.about p {
+    font-size: 1.3rem;
+    
+    line-height: 2.5rem;
+}
+
+/*合作伙伴*/
+.partners{
+    max-width: 90rem;   
+    margin-left: 26.5%;
+    margin-top: 6rem;
+
+}
+
+
+.partners p{
+    margin-left: 37%;
+    font-size: 2.2rem;
+    line-height: 10rem;
+    
+
+}
+.partners div{
+    max-width: 15%;
+    height: auto;
+    float: left;
+    text-align: center;
+    margin-right: 7.9%;
+    margin-bottom: 3rem;
+}
+
+.partners div img{
+    max-width: 88%;
+}
+
+/*营销推送*/
+.market{
+    max-width: 85rem;
+    margin-left: 29%;
+    margin-top: 6.7rem;
+}
+
+.market_all{
+    max-width: 100%;
+    margin-bottom: 5rem;
+    font-size: 1.4rem;
+    padding-right: 5rem;
+}
+
+.market_hr{
+    width: 2.5rem;
+    border: 1px solid #3A87FD;
+    margin-left: 0px;
+}
+
+.market_title{
+    margin-left: 37%;
+    font-size: 2.2rem;
+    color: #3A87FD;
+    line-height: 10rem;
+    
+}
+
+.market_little_title{
+    margin-left: 24.5%;
+    font-size: 1.5rem;
+    margin-top: -4rem;
+    margin-bottom: 6rem;
+
+}
+
+.market_txt{
+    width: 28rem;
+    height: 30rem;
+    float: left;
+    padding-left: 4rem;
+    line-height: 2rem;
+}
+
+.market_txt1{
+    width: 33rem;
+    height: 30rem;
+    float: left;
+    padding-left: 13rem;
+    line-height: 2rem;
+}
+
+.market_image{
+    width: 36rem;
+}
+
+.market_image1{
+    width: 36rem;
+    float:left; 
+    margin-left: 10rem;
+}
+
+.market_image  img{
+    width: 72%;
+    float: left;
+}
+
+.market_image1  img{
+    width: 72%;
+    float: left;
+}
+
+.market_i{
+    width: 2.5rem;
+    height: 2.5rem;
+    background-image: url("../images/fit@3x.png");
+    background-repeat:no-repeat;
+    background-size: 2.5rem;
+    margin-bottom: 1.5rem;
+    
+}
+
+/*渠道代理*/
+.agent_title{
+    margin-left: 34%;
+    font-size: 2.2rem;
+    color: #3A87FD;
+    line-height: 10rem;
+}
+
+.agent_little_title{
+    margin-left: 12%;
+    font-size: 1.5rem;
+    margin-top: -4rem;
+    margin-bottom: 6rem;
+
+}
+
+.agent_img{
+    width:80%;
+    margin-top: -5rem;
+    background-image: url("../images/agent.gif");
+    background-repeat: repeat;
+
+}
+.agent_img img{
+    width: 100%;
+
+}
+
+.agent_all{
+
+    max-width: 100%;
+    margin-top: 10rem;
+    margin-bottom: 5rem;
+    font-size: 1.4rem;
+    padding-right: 5rem;
+
+}
+.agent_i{
+    width: 4rem;
+    height: 7rem;
+    background-image: url("../images/1@3x.png");
+    background-repeat:no-repeat;
+    background-size: 4rem;
+    margin-bottom: -4rem;
+    margin-left: -1rem;
+    
+}
+
+.agent_i2{
+    width: 4rem;
+    height: 7rem;
+    background-image: url("../images/2@3x.png");
+    background-repeat:no-repeat;
+    background-size: 4rem;
+    margin-bottom: -4rem;
+    margin-left: -1rem;
+    
+}
+
+.agent_hr{
+    width: 3rem;
+    border: 1px solid #3A87FD;
+    margin-left: -1rem;
+    margin-top: 2.5rem;
+}
+
+/*应用商店*/
+.appstore_title{
+  margin-left: 23%;
+  font-size: 2.2rem;
+  color: #3A87FD;
+  line-height: 10rem;
+  margin-bottom: -2rem;
+}
+
+.appstore_button{
+  margin-left: 27rem;
+  margin-bottom: 6rem;
+
+}
+
+.appstore_all{
+  width: 57%;
+  height: auto;
+  margin-left: 22%;
+}
+
+.appstore_img{
+  width: 31%;
+  float: left;
+  margin-right: 2rem;
+  padding: 0.1rem;
+  border: 1px #E8E8E8 solid;
+  margin-bottom: 4.5rem;
+}
+.appstore_imga{
+  width:100%;
+}
+
+.appstore_imga img{
+  width:100%;
+  
+}
+
+.appstore_title_p{
+  padding-left: 0.5rem;
+  padding-top: 0.5rem;
+
+}
+
+.appstore_title_pl{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  font-size: 0.8rem;
+  color: #9C9C9C;
+  margin-top: -0.5rem;
+}
+
+.appstore_kuang{
+  width: 5rem;
+  height: 2.5rem;
+  background-color: rgba(207, 207, 207, 0.2);
+  margin-left: 22.5rem;
+  position:absolute;
+  z-index:2;
+  margin-top: -21rem;
+}
+
+.appstore_kuang p{
+  margin-left: 1.5rem;
+  margin-top: 0.7rem;
+  font-size: 1.2rem;
+}
+
+.appstore_a{
+  width: 200px;
+  font-size: 1.2rem;
+  margin-left: 42%;
+  padding-bottom: 5rem;
+  cursor: pointer;
+  color: #B5B5B5;
+  text-decoration:none;
+}
+
+
+
+@media(max-width:1300px) {
+
+    /*营销推送*/
+    .market{
+        max-width: 70rem;
+        margin-left: 20%;
+    }
+
+    .market_title{
+        margin-left: 33%;
+        font-size: 2.2rem;
+        color: #3A87FD;
+        line-height: 10rem;
+        
+    }
+
+    .market_little_title{
+        margin-left: 21%;
+        font-size: 1.5rem;
+        margin-top: -4rem;
+        margin-bottom: 6rem;
+
+    }
+
+    .market_txt{
+        width: 24rem;
+        height: 30rem;
+        float: left;
+        padding-left: 2rem;
+        line-height: 2rem;
+    }
+
+    .market_txt1{
+        width: 24rem;
+        height: 30rem;
+        float: left;
+        padding-left: 5rem;
+        line-height: 2rem;
+    }
+
+    .market_image{
+        max-width: 30rem;
+        padding: 0px;
+    }
+
+    .market_image1{
+        max-width: 30rem;
+        float:left; 
+        margin-left: 4rem;
+        padding: 0px;
+    }
+
+    .market_image  img{
+        width: 72%;
+        float: left;
+    }
+
+    .market_image1  img{
+        width: 72%;
+        float: left;
+        padding: 0px;
+    }
+
+}
+
+@media(max-width:900px) {
+
+    /*营销推送*/
+    .market{
+        max-width: 70rem;
+        margin-left: 17%;
+    }
+
+    .market_title{
+        margin-left: 33%;
+        font-size: 2.2rem;
+        color: #3A87FD;
+        line-height: 10rem;
+        
+    }
+
+    .market_little_title{
+        margin-left: 18%;
+        font-size: 1.5rem;
+        margin-top: -4rem;
+        margin-bottom: 6rem;
+
+    }
+
+    .market_txt{
+        width: 20rem;
+        height: 30rem;
+        float: left;
+        padding-left: 2rem;
+        line-height: 2rem;
+    }
+
+    .market_txt1{
+        width: 20rem;
+        height: 30rem;
+        float: left;
+        padding-left: 5rem;
+        line-height: 2rem;
+    }
+
+    .market_image{
+        max-width: 28rem;
+        padding: 0px;
+    }
+
+    .market_image1{
+        max-width: 28rem;
+        float:left; 
+        margin-left: 4rem;
+        padding: 0px;
+    }
+
+    .market_image  img{
+        width: 72%;
+        float: left;
+        margin-top: 8rem;
+    }
+
+    .market_image1  img{
+        width: 72%;
+        float: left;
+        padding: 0px;
+        margin-top: 8rem;
+    }
+
+}
+
+@media(max-width:767px) {
+
+  /*合作伙伴*/
+  .partners{   
+      margin-left: 15%;
+
+  }
+
+
+  .partners p{
+      margin-left: 28%;
+      font-size: 2.2rem;
+      line-height: 10rem;
+      
+
+  }
+  
+  .partners div{
+      max-width: 25%;
+      height: auto;
+      float: left;
+      text-align: center;
+      margin-right: 5%;
+      margin-bottom: 3rem;
+  }
+
+  /*营销推送*/
+  .market{
+      max-width: 50rem;
+      margin-left: 30%;
+  }
+
+  .market_title{
+      margin-left: 20%;
+      font-size: 2.2rem;
+      color: #3A87FD;
+      line-height: 10rem;
+      
+  }
+
+  .market_little_title{
+      margin-left: 0px;
+      font-size: 1.5rem;
+      margin-top: -4rem;
+      margin-bottom: 6rem;
+
+  }
+  .market_txt{
+      width: 22rem;
+      height: 30rem;
+      float: left;
+      padding-left: 0rem;
+      line-height: 2rem;
+  }
+
+  .market_txt1{
+      width: 22rem;
+      height: 30rem;
+      float: left;
+      padding-left: 0rem;
+      line-height: 2rem;
+  }
+
+  .market_image{
+      max-width: 30rem;
+      padding: 0px;
+      margin-top: -100px;
+  }
+
+  .market_image1{
+      max-width: 30rem;
+      float:left; 
+      margin-left: -2rem;
+      padding: 0px;
+      margin-top: -150px;
+  }
+
+  .market_image  img{
+      width: 80%;
+      float: left;
+  }
+
+  .market_image1  img{
+      width: 80%;
+      float: left;
+      padding: 0px;
+  }
+}
+
+@media(max-width:480px) {
+  /*合作伙伴*/
+  .partners{
+      max-width: 30rem;
+      margin-left: 20%;
+
+  }
+
+
+  .partners p{
+      margin-left: 25%;
+      font-size: 2.2rem;
+      line-height: 10rem;
+      
+
+  }
+  
+  .partners div{
+      max-width: 40%;
+      height: auto;
+      float: left;
+      text-align: center;
+      margin-right: 7.3%;
+      margin-bottom: 3rem;
+  }
+
+  /*营销推送*/
+    .market{
+        max-width: 30rem;
+        margin-left: 20%;
+    }
+
+    .market_title{
+        margin-left: 20%;
+        font-size: 2.2rem;
+        color: #3A87FD;
+        line-height: 10rem;
+        
+    }
+
+    .market_little_title{
+        margin-left: -30px;
+        font-size: 1.5rem;
+        margin-top: -4rem;
+        margin-bottom: 6rem;
+
+    }
+    .market_txt{
+        width: 20rem;
+        height: 30rem;
+        float: left;
+        padding-left: 0rem;
+        line-height: 2rem;
+    }
+
+    .market_txt1{
+        width: 20rem;
+        height: 30rem;
+        float: left;
+        padding-left: 0rem;
+        line-height: 2rem;
+    }
+
+    .market_image{
+        max-width: 25rem;
+        padding: 0px;
+        margin-top: -100px;
+    }
+
+    .market_image1{
+        max-width: 25rem;
+        float:left; 
+        margin-left: -2rem;
+        padding: 0px;
+        margin-top: -150px;
+    }
+
+    .market_image  img{
+        width: 80%;
+        float: left;
+    }
+
+    .market_image1  img{
+        width: 80%;
+        float: left;
+        padding: 0px;
+    }
+
+
+}
+
+
+.main_visual{
+  width: 80%;
+  height: 70rem;
+  
+}
+.main_image{height:422px;position:relative; margin-left: -3rem;}
+// .main_image ul{width:9999px;height:422px;overflow:hidden;position:absolute;top:0;left:0}
+.main_image li{float:left;width:100%;height:422px; list-style-type:none;}
+.main_image li span{display:block;width:100%;height:422px}
+.main_image li a{display:block;width:100%;height:422px}
+
+.example_title{
+  margin-left: 45%;
+  font-size: 2.2rem;
+  color: #3A87FD;
+  line-height: 10rem;
+  margin-top: 5rem;
+}
+.example_little_title{
+  margin-left: 43.5%;
+  font-size: 1.6rem;
+  margin-top: -4rem;
+  margin-bottom: 6rem;
+}
+
+
+
+.example{
+  width: 59%;
+  background-color: #F5F5F5;
+  height: 50rem;
+  margin-left: 32%;
+}
+.example_all{
+  width: 50%;
+  margin-left: 17rem;
+}
+.example_title_image{
+  width: 17rem;
+  float: left;
+  margin-right: 3rem;
+  margin-top: 3rem;
+}
+.example_title_image img{
+  width: 100%;
+}
+.example_txt{
+  font-size: 1.8rem;
+  padding: 4rem;
+}
+
+.example_txtp_div{
+  width: 84%;
+  margin-left: 9%;
+}
+.example_m_all{
+  width: 100%;
+  margin-left: 6%;
+}
+
+.example_m_all div{
+  width: 28%;
+  float: left;
+  padding: 2rem;
+}
+
+.example_m_all div img{
+  width: 100%;
+}
+
+.example_div_all{
+  width: 55%;
+  height: 20rem;
+  margin-left: 21%;
+}
+.example_bottom_title{
+  margin-left: 40%;
+  font-size: 1.6rem;
+  margin-top: -4rem;
+  margin-bottom: 6rem;
+}
+
+.gray {       
+ -webkit-filter: grayscale(100%);     
+  -moz-filter: grayscale(100%);    
+   -ms-filter: grayscale(100%);     
+  -o-filter: grayscale(100%);       
+     filter: grayscale(100%);          
+  
+filter: gray; }
+
+.example_div_tp{
+  font-size: 2.2rem;
+  margin-left: 42%;
+  line-height: 10rem;
+}
+
+.example_div_all div{
+  width: 20%;
+  float: left;
+  padding: 2rem;
+}
+.example_div_all div img{
+  width: 100%;
+}
+
+.example_bottom{
+  width: 100%;
+  height: 42rem;
+}
+.example_bottom_all{
+  width: 60%;
+  margin-left: 22.5%;
+}
+.example_bottom_all div{
+  width: 23%;
+  float: left;
+  padding: 2rem;
+}
+
+.example_bottom_all img{
+  width: 100%;
+}
+
+
+div.flicking_con{position:absolute;top:360px;left:50%;z-index:999;width:300px;height:21px;margin:0 0 0 -50px;}
+div.flicking_con a{float:left;width:21px;height:21px;margin:0;padding:0;background:url('../images/btn_main_img.png') 0 0 no-repeat;display:block;text-indent:-1000px}
+div.flicking_con a.on{background-position:0 -21px}
+#btn_prev,#btn_next{z-index:11111;position:absolute;display:block;width:73px!important;height:74px!important;top:50%;margin-top:-37px;display:none;}
+#btn_prev{background:url(../images/hover_left.png) no-repeat left top;left:100px;}
+#btn_next{background:url(../images/hover_right.png) no-repeat right top;right:100px;}
+
+/*服务价格*/
+.pricing_all{
+  width: 100%;
+  height: 40rem;
+  margin-left: -10%;
+}
+
+.pricing_div{
+  width: 33%;
+  height: 50%;
+  float: left;
+  text-align: center;
+}
+
+.pricing_div div{
+  width: 14%;
+  margin-left: 40%;
+  margin-top: 10%;
+}
+
+.pricing_div div img{
+  width: 100%;
+}
+
+.pricing_p1{
+  font-size: 1.8rem;
+  margin-top: 2rem;
+}
+.pricing_p2{
+  line-height: 1rem;
+  font-size: 1.3rem;
+  color: #828282;
+}
+
+.pricing_p3{
+  color: #00B2EE;
+}
+
+.pricing_title{
+  margin-left: 48%;
+  font-size: 2.2rem;
+  color: #3A87FD;
+  line-height: 10rem;
+  margin-top: 5rem;
+}
+
+.pricing_little_title{
+  margin-left: 42%;
+  font-size: 1.6rem;
+  margin-top: -4rem;
+  margin-bottom: 6rem;
+}
+.pring_table{
+  width: 55%;
+  margin-left: 25%;
 }
