--- a/app/views/pricing.html
+++ b/app/views/pricing.html
@@ -62,68 +62,126 @@
     <div style="width:100%; background-color:#F5F5F5;">
         <p class="pricing_title">VIP价格</p>
         <p class="pricing_little_title">购买VIP，以最优惠的价格享用最强大的功能</p>
+        <div class="pring_table_main">
+            <table class="table table-bordered">
+                <tr class="table_title"><td></td><td><p>基础版</p></td><td colspan="2" ><p>标准版</p></td><td colspan="2"><p>高级版</p></td></tr>
+                <tr><td>每月</td><td>所有号<br>免费</td><td>订阅号<br>2,000元/月</td><td>服务号<br>5,000元/月</td><td>订阅号<br>5,000元/月</td><td>服务号<br>10,000元/月</td></tr>
+            </table>
+        </div>
+        <p class="table_p">功能及应用</p>
         <div class="pring_table">
 
             <table class="table table-bordered">
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
                 <tr>
-                    <td>应用商店内应用 </td><td>按需付费</td><td>对</td><td>对</td><td>对</td><td>对</td>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
                 </tr>
             </table>
         </div>
 
+        <p class="table_p">支持及服务</p>
+        <div class="pring_table">
+
+            <table class="table table-bordered">
+                <tr>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
+                </tr>
+                <tr>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
+                </tr>
+                <tr>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
+                </tr>
+                <tr>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
+                </tr>
+                <tr>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
+                </tr>
+                <tr>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
+                </tr>
+                <tr>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
+                </tr>
+                <tr>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
+                </tr>
+            </table>
+        </div>
+
+        <p class="table_p">性能及配额</p>
+        <div class="pring_table">
+
+            <table class="table table-bordered">
+                <tr>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
+                </tr>
+                <tr>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
+                </tr>
+                <tr>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
+                </tr>
+                <tr>
+                    <td>应用商店内应用 </td><td>按需付费</td><td>√</td><td>√</td><td>√</td><td>√</td>
+                </tr>
+            </table>
+        </div>
+        <div style="width:100%; height:5rem;"></div>
+
         <div style="background-color:#ffffff;height:15rem;">
-            <button type="button">立即使用</button>
+            <button type="button" style=" margin-left:48%; margin-top:5rem;">立即使用</button>
 
         </div>
     </div>
