--- a/app/views/main.html
+++ b/app/views/main.html
@@ -37,7 +37,7 @@
 </div>
 
 <div class="updown">
-  <a>
+  <a href="http://scrm.weixinhost.com/">
     <div class="updown_div">        
         <img src="images/1.png" class="updown_img">
         <p class="updown_title">数据管理</p>
@@ -47,7 +47,7 @@
       
     </div>
   </a>
-  <a>
+  <a ng-href="#/marketing_push">
     <div class="updown_div">
       
         <img src="images/2.png" class="updown_img">
@@ -58,7 +58,7 @@
       
     </div>
   </a>
-  <a>
+  <a href="http://kol.wx-services.com/" target=_blank>
     <div class="updown_div">
       
         <img src="images/3.png" class="updown_img">
@@ -69,7 +69,7 @@
       
     </div>
   </a>
-  <a>
+  <a ng-href="#/appstore">
     <div class="updown_div">      
       <img src="images/4.png" class="updown_img">
       <p class="updown_title">轻应用</p>
